--- a/blogExpress/package.json
+++ b/blogExpress/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "expressjs",
+  "name": "blogexpress",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "node": "^17.7.2",
-    "nodemon": "^2.0.16"
-  }
+  "license": "ISC"
 }
