--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "node": "^17.7.2",
-    "nodemon": "^2.0.16"
+    "node": "^17.7.2"
   }
 }
