--- a/blogExpress/package.json
+++ b/blogExpress/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "express-handlebars": "^6.0.6"
   }
 }
